Editor working with Notes. Need to fix styling of Note page and convert html to readable text on Notes and Home pages

--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -60,7 +60,7 @@ img.logo-image {
     height: 100px;
 }
 
-ul {
+ul.errors-display {
     list-style-type: none;
     display: flex;
     justify-content: center;
@@ -68,7 +68,7 @@ ul {
     padding: 5px 0;
 
 }
-li {
+li.list-errirs {
     font-size: 14px;
     color: rgb(192, 28, 28)
 }
