--- a/frontend/src/components/Note/Note.css
+++ b/frontend/src/components/Note/Note.css
@@ -13,3 +13,26 @@ button.delete-tag:hover {
 #tags-title {
     margin-right: 10px;
 }
+
+
+.editor {
+    overflow-y: auto;
+    height: 100%;
+}
+
+/*  */
+.ck.ck-editor , .ck-editor__main,  .ck-content{
+    height: 85%;
+}
+
+/* .ck.ck-editor {
+    overflow-y: scroll;
+} */
+
+.ck-editor__main {
+    overflow-y: auto;
+}
+
+.ck-content:focus {
+    outline: none;
+}
