--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,7 +19,7 @@ body {
 * {
     box-sizing: border-box;
     font-family: 'Nunito', sans-serif;
-    text-decoration: none;
+    /* text-decoration: none; */
 }
 
 button {
